[tool.poetry]
name = "taskoverflow"
version = "0.1.0"
description = "TaskOverflow Application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"